# metamask-id

./: README.md  readme.md
hyle-snap/: README.md  package.json  tsconfig.json
metamask-contract/: Cargo.toml  README.md
metamask-contract/contract/: Cargo.toml
metamask-contract/contract/src/: actions.rs  client.rs  indexer.rs  lib.rs
metamask-contract/host/: Cargo.toml
metamask-contract/host/src/: main.rs
metamask-contract/methods/guest/: Cargo.toml
metamask-contract/methods/guest/src/: main.rs
metamask-identity/hyle-snap/: package.json
metamask-identity/metamask-contract/: Cargo.toml
metamask-identity/metamask-contract/contract/: Cargo.toml
metamask-identity/metamask-contract/contract/src/: client.rs  lib.rs
metamask-identity/metamask-contract/host/: Cargo.toml
metamask-identity/metamask-contract/host/src/: main.rs
metamask-identity/metamask-contract/methods/guest/: Cargo.toml
