[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sdk = { git = "https://github.com/hyle-org/hyle", package = "hyle-contract-sdk", features = [
  "risc0",
], tag = "secp256k1.0.1.0" }
# sdk = { path = "/home/bertrand/workspace/hyle2/crates/contract-sdk", features = ["risc0"], package = "hyle-contract-sdk" }
contract-identity = { path = "../../contract", default-features = false }

# Later versions required more recent version of rust that risc0 toolchain
bytemuck_derive = "=1.8.1"

risc0-zkvm = { version = "1.2.2", default-features = false, features = ['std'] }
